# neura-keyguard-ai-scan-WIP

./: .env.example  Dockerfile.backend  Dockerfile.frontend  PRD.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json
server/: .env.example  Cargo.toml
server/src/: ai_service.rs  auth.rs  database.rs  main.rs  scanner.rs
src/components/: AIRecommendations.tsx  ScanProgress.tsx  ScanResults.tsx
src/lib/: ai-recommendations.ts  analytics.ts  api-client.ts  api-patterns.ts  scanner-client.ts  scanner.ts
src/pages/: Index.tsx
src/types/: scan.ts
